# siovi

./: README.md  config.yaml  pyproject.toml  secret_key.json
.streamlit/: secrets.toml
data/: bairros.csv
src/: app.py  form_app.py
tests/: test_siovi.py
